clusters/hive/apps/homeassistant/k8s-manifests/addon-zigbee2mqtt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addon-zigbee2mqtt
  namespace: homeassistant
spec:
  ingressClassName: traefik
  rules:
    - host: zigbee2mqtt.home.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: addon-zigbee2mqtt
                port:
                  number: 8080
            path: /
            pathType: Prefix
